[project]
name = "snlo-helper"
dynamic = ["version"]
description = "An autoclicker to automatically configure and read SNLO."

requires-python = ">=3.9"
dependencies = [
    "pyautogui",
    "pyperclip",
]
readme = "README.md"


[project.optional-dependencies]
full = ["numpy"]


[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
select = ["E", "F", "W"]
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "build",
    "dist",
    "docs/conf.py",
]
