[project]
name = "snlo-helper"
dynamic = ["version"]
authors = [
    {name = "Benedikt Burger"},
]
description = "An autoclicker to automatically configure and read SNLO."
keywords = ["SNLO", "nonlinear optics", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]

requires-python = ">=3.9"
dependencies = [
    "pyautogui",
    "pyperclip",
]
readme = "README.md"


[project.optional-dependencies]
full = ["numpy"]


[project.urls]
Repository = "https://github.com/BenediktBurger/snlo-helper"
Issues = "https://github.com/BenediktBurger/snlo-helper/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write_to = "pyleco/_version.py"

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "build",
    "dist",
    "docs/conf.py",
]
